js/js.translator/testData/incremental/invalidation/updateExportsAndInlineImportsWithCrossModuleInliner/lib1/l1c.3.kt
inline fun fun3() = "fun3-3"
